--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <!-- HEADER -->
-<header class="container-nav container-fluid">
+<header class="container-nav container-fluid z-2 position-absolute">
   
     <!-- NAV -->
     <nav class="navbar navbar-expand-lg m-0">
