--- a/index.html
+++ b/index.html
@@ -30,56 +30,56 @@
 <header class="container-nav container-fluid z-2 position-absolute">
   
   <!-- NAV -->
-  <nav class="navbar navbar-expand-lg">
-      <!-- LOGO -->
-      <div class="logo-container">
-          <img src="./img/LGMdt.jpg"/>
-      </div>
-      
-      <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-      >
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div
-          class="collapse navbar-collapse justify-content-end"
-          id="navbarNavDropdown"
-      >
-          <ul class="nav-vertical nav-underline p-3">
-              <li class="nav-item">
-                  <a class="nav-link fs-6 p-3" aria-current="page" href="./index.html">MDT</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link fs-6 p-3" href="./eter.html">ETER STREAM</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link fs-6 p-3" href="./tv.html">TV</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link fs-6 p-3" href="./radio.html">RADIO</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link fs-6 p-3" href="./contacto.html">CONTACTO</a>
-              </li>
-          </ul>
-      </div>
-  </nav>
+<nav class="navbar navbar-expand-lg">
+  <!-- LOGO -->
+  <div class="logo-container">
+      <img src="./img/LGMdt.jpg"/>
+  </div>
+  
+  <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+  >
+      <span class="navbar-toggler-icon"></span>
+  </button>
+  <div
+      class="collapse navbar-collapse justify-content-end"
+      id="navbarNavDropdown"
+  >
+      <ul class="navbar-nav flex-column flex-lg-row align-items-center"> <!-- Añade la clase "flex-column" aquí -->
+          <li class="nav-item">
+              <a class="nav-link fs-6 p-3" aria-current="page" href="./index.html">MDT</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link fs-6 p-3" href="./eter.html">ETER STREAM</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link fs-6 p-3" href="./tv.html">TV</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link fs-6 p-3" href="./radio.html">RADIO</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link fs-6 p-3" href="./contacto.html">CONTACTO</a>
+          </li>
+      </ul>
+  </div>
+</nav>
 </header>
     
 
     <div class="position-relative z-1">
   
-      <div class="cartel-inicio row-12 text-slider p-3 ms-0 position-absolute bg-opacity-75 w-50">
+      <div class="cartel-inicio row-12 text-slider p-3 ms-0 position-absolute w-50 text-center">
         <h1 class="fs-1">MDT</h1>
         <p class="fs-5">PRODUCTORA AUDIOVISUAL</p>
       </div>
-      <img src="img/iniciomdt.jpg" alt="" class="container-fluid p-0 top-0 vh-100 object-fit-cover">
+      <img src="img/iniciomdt.jpg" alt="" class="img-mdt container-fluid p-0 top-0 vh-100 object-fit-cover">
     </div>
 
 <!-- ICONO DE WHATASAPP  -->
