--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link href="./Hover-master/css/hover.css" rel="stylesheet" media="all">
     
     <script
@@ -73,10 +74,19 @@
 </header>
     
 
-    <div class="position-relative z-1">
+    <div class="position-relative z-1 animate__animated animate__fadeIn">
   
       <div class="cartel-inicio row-12 text-slider p-3 ms-0 position-absolute w-50 text-center">
-        <h1 class="fs-1">MDT</h1>
+        <h1 class="fs-1">MDT <span>
+          <img src="img/audio_volume_icon.png" alt="" class="logo-mdt">
+        </span>
+        <span>
+          <img src="img/video_camera_icon.png" alt="" class="logo-mdt">
+        </span>
+        <span>
+          <img src="img/microphone_audio_mic_icon.png" alt="" class="logo-mdt">
+        </span>
+      </h1>
         <p class="fs-5">PRODUCTORA AUDIOVISUAL</p>
       </div>
       <img src="img/iniciomdt.jpg" alt="" class="img-mdt container-fluid p-0 top-0 vh-100 object-fit-cover">
