--- a/eter.html
+++ b/eter.html
@@ -16,6 +16,7 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link href="./Hover-master/css/hover.css" rel="stylesheet" media="all">
     
     <script
@@ -70,7 +71,7 @@
   </div>
 </nav>
     </header>
-    <div class="position-relative z-1">
+    <div class="position-relative z-1 animate__animated animate__fadeIn">
   
       <div class="cartel-eter row-12 text-slider p-2 ms-0 position-absolute w-50 text-center">
         <h1 class="fs-1">ETÉR STREAM 
