--- a/tv.html
+++ b/tv.html
@@ -22,6 +22,7 @@
       src="https://kit.fontawesome.com/304be95d7a.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>MDTproductora</title>
 </head>
 <body>
@@ -71,7 +72,18 @@
 </nav>
     </header>
     
-    
+    <div class="position-relative z-1 animate__animated animate__fadeIn">
+  
+      <div class="cartel-tv row-12 text-slider p-3 ms-0 position-absolute w-50 text-center">
+        <h1 class="fs-1">TV 
+          <span>
+          <img src="img/tv_show_icon.png" alt="" class="logo-tv">
+        </span>
+      </h1>
+        <p class="fs-5">TELEVISION ABIERTA</p>
+      </div>
+      <img src="img/eter2.jpg" alt="" class="img-tv container-fluid p-0 top-0 vh-100 object-fit-cover">
+    </div>
     <!-- ICONO DE WHATASAPP  -->
     <div class="wsp-btn">
       <a href="https://wa.me/+5493424463777"><img class="wsp-msg position-fixed" src="./img/whatsapp-svgrepo-com.svg" alt="icono Whatsapp"></a>
