Reemplazos de colores

--- a/eter.html
+++ b/eter.html
@@ -79,7 +79,7 @@
             <img src="img/INFINITE-ETER.png" alt="" class="logo-eter"> 
           </span>
         </h1>
-        <p class="fs-5">TU INFINITO AL ALCANCE</p>
+        <p class="fs-5">TU INFINITO EN STREAMING</p>
       </div>
       <img src="img/eter1.jpg" alt="imagen-eter" class="img-eter container-fluid p-0 top-0 vh-100 object-fit-cover">
     </div>
