--- a/index.html
+++ b/index.html
@@ -150,24 +150,20 @@
 <!-- grupo 2 sobre nosotros-->
     <div class="box2 col-lg-4 text-center mt-5">
       <div class="row container-fluid">
-         <h4 class="m-1">INFORMACIÓN</h4>
-      <!-- <a href="index.html" class="m-1">Inicio</a>
-      <a href="sobreancora.html" class="m-1">Sobre ÁNCORA</a>
-      <a href="proyectos.html" class="m-1">Proyectos</a>
-      <a href="info.html" class="m-1">Info+</a>
-      <a href="FormularioAncora.html" class="m-1">Contacto</a>
-      <a href="#" class="m-1">Acerca de</a> -->
-      <p>Gutierrez 2538, Santa Fe, Argentina </p>
-      <p> Telefono: (+54) 342 - 5782141 </p>
-      <p>Email: contacto@mdtproductora.com</p>
-      <p>MDT  PRODUCTORA AUDIOVISUAL</p>
+        <h4 class="m-1">INFORMACIÓN</h4>
+        <div class="info mt-3">
+          <p>Gutierrez 2538, Santa Fe, Argentina </p>
+          <p> Telefono: (+54) 342 - 5782141 </p>
+          <p>Email: contacto@mdtproductora.com</p>
+          <p>MDT  PRODUCTORA AUDIOVISUAL</p>
+        </div>
       </div>
      
     </div>
 
 <!-- grupo 3 redes-->
     <div class="box3 col-lg-4">
-      <h4 class="text-center mt-5">SIGUENOS</h4>
+      <h4 class="text-center mt-5 text-light">SIGUENOS</h4>
       <div class="redes d-flex justify-content-center">
         <a href="http://www.facebook.com" class="fa fa-facebook p-4 fs-5"> </a>
         <a href="http://www.twitter.com" class="fa fa-twitter p-4 fs-5"> </a>
