Seccion de eter y boton de wsp

--- a/eter.html
+++ b/eter.html
@@ -88,6 +88,96 @@
 <div class="wsp-btn">
   <a href="https://wa.me/+5493424463777"><img class="wsp-msg position-fixed" src="./img/whatsapp-svgrepo-com.svg" alt="icono Whatsapp"></a>
  </div>
+
+
+ <div class="container mt-5">
+  <div class="row">
+    <!-- Card 1 -->
+    <div class="col-lg-4 col-md-6 mb-4">
+      <div class="card">
+        <div class="card-img-container">
+          <img src="img/SESSION BARBER.png" class="card-img-top" alt="...">
+          <div class="card-overlay">
+            <h5 class="card-title">SESSION BARBER</h5>
+            <p class="card-text">ERNESTO</p>
+            <a href="#" class="btn btn-primary">Ver más</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 2 -->
+    <div class="col-lg-4 col-md-6 mb-4">
+      <div class="card">
+        <div class="card-img-container">
+          <img src="img/tamo ready 2024.png" class="card-img-top" alt="...">
+          <div class="card-overlay">
+            <h5 class="card-title">TAMOS READY</h5>
+            <p class="card-text">ADRIAN</p>
+            <a href="#" class="btn btn-primary">Ver más</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="col-lg-4 col-md-6 mb-4">
+      <div class="card">
+        <div class="card-img-container">
+          <img src="img/DESPUES DE TODO.png" class="card-img-top" alt="...">
+          <div class="card-overlay">
+            <h5 class="card-title">DESPUES DE TODO</h5>
+            <p class="card-text">MARTIN</p>
+            <a href="#" class="btn btn-primary">Ver más</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 4 -->
+    <div class="col-lg-4 col-md-6 mb-4">
+      <div class="card">
+        <div class="card-img-container">
+          <img src="img/estodo1tema.png" class="card-img-top" alt="...">
+          <div class="card-overlay">
+            <h5 class="card-title">ES TODO 1 TEMA</h5>
+            <p class="card-text">LOS PENDEJOS</p>
+            <a href="#" class="btn btn-primary">Ver más</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 5 -->
+    <div class="col-lg-4 col-md-6 mb-4">
+      <div class="card">
+        <div class="card-img-container">
+          <img src="img/fulbo juntes.png" class="card-img-top" alt="...">
+          <div class="card-overlay">
+            <h5 class="card-title">FULBO SIN FILT</h5>
+            <p class="card-text">EMMA</p>
+            <a href="#" class="btn btn-primary">Ver más</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 6 -->
+    <div class="col-lg-4 col-md-6 mb-4">
+      <div class="card">
+        <div class="card-img-container">
+          <img src="img/LA-BANDEJA-DSC.jpg" class="card-img-top" alt="...">
+          <div class="card-overlay">
+            <h5 class="card-title">LA BANDEJA</h5>
+            <p class="card-text">LA BANDA</p>
+            <a href="#" class="btn btn-primary">Ver más</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  
     
         
         <!-- FOOTER  -->
@@ -108,12 +198,7 @@
     <div class="box2 col-lg-4 text-center mt-5">
       <div class="row container-fluid">
          <h4 class="m-1">INFORMACIÓN</h4>
-      <!-- <a href="index.html" class="m-1">Inicio</a>
-      <a href="sobreancora.html" class="m-1">Sobre ÁNCORA</a>
-      <a href="proyectos.html" class="m-1">Proyectos</a>
-      <a href="info.html" class="m-1">Info+</a>
-      <a href="FormularioAncora.html" class="m-1">Contacto</a>
-      <a href="#" class="m-1">Acerca de</a> -->
+
       <p>Gutierrez 2538, Santa Fe, Argentina </p>
       <p> Telefono: (+54) 342 - 5782141 </p>
       <p>Email: contacto@mdtproductora.com</p>
