limpieza y orden de codigo y links en las cards de eter

--- a/contacto.html
+++ b/contacto.html
@@ -26,12 +26,17 @@
     <title>MDTproductora</title>
 </head>
 <body>
+
     <!-- HEADER -->
+
 <header class="container-nav container-fluid">
   
    <!-- NAV -->
+
 <nav class="navbar navbar-expand-lg">
+
   <!-- LOGO -->
+  
   <div class="logo-container">
       <img src="./img/LGMdt.jpg"/>
   </div>
@@ -51,7 +56,7 @@
       class="collapse navbar-collapse justify-content-end"
       id="navbarNavDropdown"
   >
-      <ul class="navbar-nav flex-column flex-lg-row align-items-center"> <!-- Añade la clase "flex-column" aquí -->
+      <ul class="navbar-nav flex-column flex-lg-row align-items-center"> 
           <li class="nav-item">
               <a class="nav-link fs-6 p-3" aria-current="page" href="./index.html">MDT</a>
           </li>
@@ -164,12 +169,6 @@
     <div class="box2 col-lg-4 text-center mt-5">
       <div class="row container-fluid">
          <h4 class="m-1">INFORMACIÓN</h4>
-      <!-- <a href="index.html" class="m-1">Inicio</a>
-      <a href="sobreancora.html" class="m-1">Sobre ÁNCORA</a>
-      <a href="proyectos.html" class="m-1">Proyectos</a>
-      <a href="info.html" class="m-1">Info+</a>
-      <a href="FormularioAncora.html" class="m-1">Contacto</a>
-      <a href="#" class="m-1">Acerca de</a> -->
       <p>Gutierrez 2538, Santa Fe, Argentina </p>
       <p> Telefono: (+54) 342 - 5782141 </p>
       <p>Email: contacto@mdtproductora.com</p>
