--- a/eter.html
+++ b/eter.html
@@ -26,12 +26,17 @@
     <title>MDTproductora</title>
 </head>
 <body>
+
     <!-- HEADER -->
+
 <header class="container-nav container-fluid z-2 position-absolute">
   
     <!-- NAV -->
+
 <nav class="navbar navbar-expand-lg">
+
   <!-- LOGO -->
+
   <div class="logo-container">
       <img src="./img/LGMdt.jpg"/>
   </div>
@@ -51,7 +56,7 @@
       class="collapse navbar-collapse justify-content-end"
       id="navbarNavDropdown"
   >
-      <ul class="navbar-nav flex-column flex-lg-row align-items-center"> <!-- Añade la clase "flex-column" aquí -->
+      <ul class="navbar-nav flex-column flex-lg-row align-items-center"> 
           <li class="nav-item">
               <a class="nav-link fs-6 p-3" aria-current="page" href="./index.html">MDT</a>
           </li>
@@ -85,6 +90,7 @@
     </div>
 
 <!-- ICONO DE WHATASAPP  -->
+
 <div class="wsp-btn">
   <a href="https://wa.me/+5493424463777"><img class="wsp-msg position-fixed" src="./img/whatsapp-svgrepo-com.svg" alt="icono Whatsapp"></a>
  </div>
@@ -92,15 +98,16 @@
 
  <div class="container mt-5">
   <div class="row">
+
+
     <!-- Card 1 -->
     <div class="col-lg-4 col-md-6 mb-4">
       <div class="card">
         <div class="card-img-container">
           <img src="img/SESSION BARBER.png" class="card-img-top" alt="...">
-          <div class="card-overlay">
-            <h5 class="card-title">SESSION BARBER</h5>
-            <p class="card-text">ERNESTO</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+          <div class="card-overlay text-center">
+            <a href="#" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="#" class="fa fa-instagram icon-ig fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
       </div>
@@ -111,10 +118,9 @@
       <div class="card">
         <div class="card-img-container">
           <img src="img/tamo ready 2024.png" class="card-img-top" alt="...">
-          <div class="card-overlay">
-            <h5 class="card-title">TAMOS READY</h5>
-            <p class="card-text">ADRIAN</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+          <div class="card-overlay text-center">
+            <a href="#" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="#" class="fa fa-instagram icon-ig fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
       </div>
@@ -125,10 +131,9 @@
       <div class="card">
         <div class="card-img-container">
           <img src="img/DESPUES DE TODO.png" class="card-img-top" alt="...">
-          <div class="card-overlay">
-            <h5 class="card-title">DESPUES DE TODO</h5>
-            <p class="card-text">MARTIN</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+          <div class="card-overlay text-center">
+            <a href="#" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="#" class="fa fa-instagram icon-ig fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
       </div>
@@ -139,10 +144,9 @@
       <div class="card">
         <div class="card-img-container">
           <img src="img/estodo1tema.png" class="card-img-top" alt="...">
-          <div class="card-overlay">
-            <h5 class="card-title">ES TODO 1 TEMA</h5>
-            <p class="card-text">LOS PENDEJOS</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+          <div class="card-overlay text-center">
+            <a href="#" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="#" class="fa fa-instagram icon-ig  fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
       </div>
@@ -153,10 +157,9 @@
       <div class="card">
         <div class="card-img-container">
           <img src="img/fulbo juntes.png" class="card-img-top" alt="...">
-          <div class="card-overlay">
-            <h5 class="card-title">FULBO SIN FILT</h5>
-            <p class="card-text">EMMA</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+          <div class="card-overlay text-center">
+            <a href="#" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="#" class="fa fa-instagram icon-ig  fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
       </div>
@@ -167,10 +170,9 @@
       <div class="card">
         <div class="card-img-container">
           <img src="img/LA-BANDEJA-DSC.jpg" class="card-img-top" alt="...">
-          <div class="card-overlay">
-            <h5 class="card-title">LA BANDEJA</h5>
-            <p class="card-text">LA BANDA</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+          <div class="card-overlay text-center">
+            <a href="#" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="#" class="fa fa-instagram icon-ig fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
       </div>
