--- a/index.html
+++ b/index.html
@@ -26,13 +26,17 @@
     <title>MDTproductora</title>
 </head>
 <body>
-    <!-- HEADER -->
+    
 <!-- HEADER -->
+
 <header class="container-nav container-fluid z-2 position-absolute">
   
   <!-- NAV -->
+
 <nav class="navbar navbar-expand-lg">
+  
   <!-- LOGO -->
+
   <div class="logo-container">
       <img src="./img/LGMdt.jpg"/>
   </div>
@@ -52,7 +56,7 @@
       class="collapse navbar-collapse justify-content-end"
       id="navbarNavDropdown"
   >
-      <ul class="navbar-nav flex-column flex-lg-row align-items-center"> <!-- Añade la clase "flex-column" aquí -->
+      <ul class="navbar-nav flex-column flex-lg-row align-items-center"> 
           <li class="nav-item">
               <a class="nav-link fs-6 p-3" aria-current="page" href="./index.html">MDT</a>
           </li>
