modificaciones hechas y por hacer

--- a/eter.html
+++ b/eter.html
@@ -37,8 +37,8 @@
 
   <!-- LOGO -->
 
-  <div class="logo-container">
-      <img src="./img/LGMdt.jpg"/>
+  <div class="logo-container opacity-75">
+      <img src="./img/LGMdt.png"/>
   </div>
   
   <button
@@ -86,7 +86,7 @@
         </h1>
         <p class="fs-5">TU INFINITO EN STREAMING</p>
       </div>
-      <img src="img/eter1.jpg" alt="imagen-eter" class="img-eter container-fluid p-0 top-0 vh-100 object-fit-cover">
+      <img src="img/eter-inicio.png" alt="imagen-eter" class="img-eter container-fluid p-0 top-0 vh-100 object-fit-cover">
     </div>
 
 <!-- ICONO DE WHATASAPP  -->
@@ -96,12 +96,12 @@
  </div>
 
 
- <div class="container mt-5">
+ <div class="container mt-5 ">
   <div class="row">
 
 
     <!-- Card 1 -->
-    <div class="col-lg-4 col-md-6 mb-4">
+    <div class="col-lg-4 col-md-6 mb-4 ">
       <div class="card">
         <div class="card-img-container">
           <img src="img/SESSION BARBER.png" class="card-img-top" alt="...">
@@ -114,7 +114,7 @@
     </div>
 
     <!-- Card 2 -->
-    <div class="col-lg-4 col-md-6 mb-4">
+    <div class="col-lg-4 col-md-6 mb-4 ">
       <div class="card">
         <div class="card-img-container">
           <img src="img/tamo ready 2024.png" class="card-img-top" alt="...">
@@ -127,7 +127,7 @@
     </div>
 
     <!-- Card 3 -->
-    <div class="col-lg-4 col-md-6 mb-4">
+    <div class="col-lg-4 col-md-6 mb-4 ">
       <div class="card">
         <div class="card-img-container">
           <img src="img/DESPUES DE TODO.png" class="card-img-top" alt="...">
@@ -140,7 +140,7 @@
     </div>
 
     <!-- Card 4 -->
-    <div class="col-lg-4 col-md-6 mb-4">
+    <div class="col-lg-4 col-md-6 mb-4 ">
       <div class="card">
         <div class="card-img-container">
           <img src="img/estodo1tema.png" class="card-img-top" alt="...">
@@ -153,7 +153,7 @@
     </div>
 
     <!-- Card 5 -->
-    <div class="col-lg-4 col-md-6 mb-4">
+    <div class="col-lg-4 col-md-6 mb-4 ">
       <div class="card">
         <div class="card-img-container">
           <img src="img/fulbo juntes.png" class="card-img-top" alt="...">
@@ -166,7 +166,7 @@
     </div>
 
     <!-- Card 6 -->
-    <div class="col-lg-4 col-md-6 mb-4">
+    <div class="col-lg-4 col-md-6 mb-4 ">
       <div class="card">
         <div class="card-img-container">
           <img src="img/LA-BANDEJA-DSC.jpg" class="card-img-top" alt="...">
@@ -185,7 +185,7 @@
         <!-- FOOTER  -->
 
 <!-- grupo 1 logo-->
-<footer class="pie-pagina w-100">
+<footer class="pie-pagina w-100 text-center">
   <div class="grupo-1 d-flex flex-column flex-md-row ">
     <div class="box1 col-lg-4">
       <div class="img-container d-flex justify-content-center align-items-center">
@@ -194,17 +194,30 @@
         </a>
 
       </div>
+
+      <!-- grupo 2 sobre nosotros-->
+          <div class="box2 mt-2">
+            <div class="row container-fluid">
+              <div class="info">
+                <p>Gutierrez 2538, Santa Fe, Argentina </p>
+                <p> Telefono: (+54) 342 - 5782141 </p>
+                <p>Email: contacto@mdtproductora.com</p>
+                <p>MDT  PRODUCTORA AUDIOVISUAL</p>
+              </div>
+            </div>
+           
+          </div>
     </div>
 
-<!-- grupo 2 sobre nosotros-->
     <div class="box2 col-lg-4 text-center mt-5">
       <div class="row container-fluid">
-         <h4 class="m-1">INFORMACIÓN</h4>
-
-      <p>Gutierrez 2538, Santa Fe, Argentina </p>
-      <p> Telefono: (+54) 342 - 5782141 </p>
-      <p>Email: contacto@mdtproductora.com</p>
-      <p>MDT  PRODUCTORA AUDIOVISUAL</p>
+        <h4 class="m-1">INFORMACIÓN</h4>
+        <div class="info mt-3">
+          <p>Gutierrez 2538, Santa Fe, Argentina </p>
+          <p> Telefono: (+54) 342 - 5782141 </p>
+          <p>Email: contacto@mdtproductora.com</p>
+          <p>MDT  PRODUCTORA AUDIOVISUAL</p>
+        </div>
       </div>
      
     </div>
