--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
   <!-- NAV -->
 
 <nav class="navbar navbar-expand-lg">
-  
+
   <!-- LOGO -->
 
-  <div class="logo-container">
-      <img src="./img/LGMdt.jpg"/>
+  <div class="logo-container opacity-75">
+      <img src="./img/LGMdt.png"/>
   </div>
   
   <button
@@ -140,7 +140,7 @@
         <!-- FOOTER  -->
 
 <!-- grupo 1 logo-->
-<footer class="pie-pagina w-100">
+<footer class="pie-pagina w-100 text-center">
   <div class="grupo-1 d-flex flex-column flex-md-row ">
     <div class="box1 col-lg-4">
       <div class="img-container d-flex justify-content-center align-items-center">
@@ -149,9 +149,21 @@
         </a>
 
       </div>
+
+      <!-- grupo 2 sobre nosotros-->
+          <div class="box2 mt-2">
+            <div class="row container-fluid">
+              <div class="info">
+                <p>Gutierrez 2538, Santa Fe, Argentina </p>
+                <p> Telefono: (+54) 342 - 5782141 </p>
+                <p>Email: contacto@mdtproductora.com</p>
+                <p>MDT  PRODUCTORA AUDIOVISUAL</p>
+              </div>
+            </div>
+           
+          </div>
     </div>
 
-<!-- grupo 2 sobre nosotros-->
     <div class="box2 col-lg-4 text-center mt-5">
       <div class="row container-fluid">
         <h4 class="m-1">INFORMACIÓN</h4>
@@ -164,6 +176,7 @@
       </div>
      
     </div>
+
 
 <!-- grupo 3 redes-->
     <div class="box3 col-lg-4">
