--- a/radio.html
+++ b/radio.html
@@ -23,8 +23,8 @@
    <!-- NAV -->
 <nav class="navbar navbar-expand-lg">
   <!-- LOGO -->
-  <div class="logo-container">
-      <img src="./img/LGMdt.jpg"/>
+  <div class="logo-container opacity-75">
+      <img src="./img/LGMdt.png"/>
   </div>
   
   <button
@@ -84,28 +84,42 @@
   <!-- FOOTER  -->
 
 <!-- grupo 1 logo-->
-<footer class="pie-pagina w-100">
-<div class="grupo-1 d-flex flex-column flex-md-row ">
-<div class="box1 col-lg-4">
-<div class="img-container d-flex justify-content-center align-items-center">
-  <a href="#">
-    <img class="d-flex justify-content-center align-items-center mt-5" src="./img/LOGOMDT.png" alt="Logo de Ancora">
-  </a>
+<footer class="pie-pagina w-100 text-center">
+  <div class="grupo-1 d-flex flex-column flex-md-row ">
+    <div class="box1 col-lg-4">
+      <div class="img-container d-flex justify-content-center align-items-center">
+        <a href="#">
+          <img class="d-flex justify-content-center align-items-center mt-5" src="./img/LOGOMDT.png" alt="Logo de Ancora">
+        </a>
 
-</div>
-</div>
+      </div>
 
-<!-- grupo 2 sobre nosotros-->
-<div class="box2 col-lg-4 text-center mt-5">
-<div class="row container-fluid">
-   <h4 class="m-1">INFORMACIÓN</h4>
-<p>Gutierrez 2538, Santa Fe, Argentina </p>
-<p> Telefono: (+54) 342 - 5782141 </p>
-<p>Email: contacto@mdtproductora.com</p>
-<p>MDT  PRODUCTORA AUDIOVISUAL</p>
-</div>
+      <!-- grupo 2 sobre nosotros-->
+          <div class="box2 mt-2">
+            <div class="row container-fluid">
+              <div class="info">
+                <p>Gutierrez 2538, Santa Fe, Argentina </p>
+                <p> Telefono: (+54) 342 - 5782141 </p>
+                <p>Email: contacto@mdtproductora.com</p>
+                <p>MDT  PRODUCTORA AUDIOVISUAL</p>
+              </div>
+            </div>
+           
+          </div>
+    </div>
 
-</div>
+    <div class="box2 col-lg-4 text-center mt-5">
+      <div class="row container-fluid">
+        <h4 class="m-1">INFORMACIÓN</h4>
+        <div class="info mt-3">
+          <p>Gutierrez 2538, Santa Fe, Argentina </p>
+          <p> Telefono: (+54) 342 - 5782141 </p>
+          <p>Email: contacto@mdtproductora.com</p>
+          <p>MDT  PRODUCTORA AUDIOVISUAL</p>
+        </div>
+      </div>
+     
+    </div>
 
 <!-- grupo 3 redes-->
 <div class="box3 col-lg-4">
