--- a/eter.html
+++ b/eter.html
@@ -29,7 +29,7 @@
 
     <!-- HEADER -->
 
-<header class="container-nav container-fluid z-2 position-absolute">
+<header class="container-nav container-fluid z-2 position-fixed">
   
     <!-- NAV -->
 
@@ -79,10 +79,11 @@
     <div class="position-relative z-1 animate__animated animate__fadeIn">
   
       <div class="cartel-eter row-12 text-slider p-2 ms-0 position-absolute w-50 text-center">
-        <h1 class="fs-1">ETÉR STREAM 
+        <h1 class="fs-1">
           <span>
-            <img src="img/INFINITE-ETER.png" alt="" class="logo-eter"> 
+            <img src="img/logo-de-eter-para-titulo.png" alt="" class="logo-eter"> 
           </span>
+          ETÉR STREAM 
         </h1>
         <p class="fs-5">TU INFINITO EN STREAMING</p>
       </div>
