--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="formulario.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,58 +29,58 @@
 
     <!-- HEADER -->
 
-<header class="container-nav container-fluid">
+<header class="container-nav container-fluid z-2 position-fixed">
   
-   <!-- NAV -->
+  <!-- NAV -->
 
 <nav class="navbar navbar-expand-lg">
 
-  <!-- LOGO -->
+<!-- LOGO -->
 
-  <div class="logo-container opacity-75">
-      <img src="./img/LGMdt.png"/>
-  </div>
-  
-  <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNavDropdown"
-      aria-controls="navbarNavDropdown"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-  >
-      <span class="navbar-toggler-icon"></span>
-  </button>
-  <div
-      class="collapse navbar-collapse justify-content-end"
-      id="navbarNavDropdown"
-  >
-      <ul class="navbar-nav flex-column flex-lg-row align-items-center"> 
-          <li class="nav-item">
-              <a class="nav-link fs-6 p-3" aria-current="page" href="./index.html">MDT</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link fs-6 p-3" href="./eter.html">ETER STREAM</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link fs-6 p-3" href="./tv.html">TV</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link fs-6 p-3" href="./radio.html">RADIO</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link fs-6 p-3" href="./contacto.html">CONTACTO</a>
-          </li>
-      </ul>
-  </div>
+<div class="logo-container">
+    <img src="./img/LGMdt.png"/>
+</div>
+
+<button
+    class="navbar-toggler"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#navbarNavDropdown"
+    aria-controls="navbarNavDropdown"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+>
+    <span class="navbar-toggler-icon"></span>
+</button>
+<div
+    class="collapse navbar-collapse justify-content-end"
+    id="navbarNavDropdown"
+>
+    <ul class="navbar-nav flex-column flex-lg-row align-items-center"> 
+        <li class="nav-item">
+            <a class="nav-link fs-6 p-3" aria-current="page" href="./index.html">MDT</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link fs-6 p-3" href="./eter.html">ETER STREAM</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link fs-6 p-3" href="./tv.html">TV</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link fs-6 p-3" href="./radio.html">RADIO</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link fs-6 p-3" href="./contacto.html">CONTACTO</a>
+        </li>
+    </ul>
+</div>
 </nav>
-    </header>
+  </header>
     <div class="container d-flex text-center align-items-center justify-content-center mt-5 w-50">
 
-      <h1 class="h-contacto p-2 rounded-3 ">CONTACTO</h1>
+      <h1 class="h-contacto p-2 rounded-3 mt-5">CONTACTO</h1>
     </div>
-    <div class="container mt-3 w-75 animate__animated animate__fadeIn fs-5">
+    <div class="container mt-3 w-75 animate__animated animate__fadeIn fs-6">
       <form action="https://formsubmit.co/francogabrielalconchel@gmail.com" method="POST" id="formulario-contacto" class="formulario p-4 rounded-3">
           <div class="form-group row">
               <div class="col-md-6 mt-4">
