--- a/contacto.html
+++ b/contacto.html
@@ -23,7 +23,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <title>MDTproductora</title>
+    <title>MDT-CONTACTO</title>
 </head>
 <body>
 
@@ -180,18 +180,7 @@
           </div>
     </div>
 
-    <div class="box2 col-lg-4 text-center mt-5">
-      <div class="row container-fluid">
-        <h4 class="m-1">INFORMACIÓN</h4>
-        <div class="info mt-3">
-          <p>Gutierrez 2538, Santa Fe, Argentina </p>
-          <p> Telefono: (+54) 342 - 5782141 </p>
-          <p>Email: contacto@mdtproductora.com</p>
-          <p>MDT  PRODUCTORA AUDIOVISUAL</p>
-        </div>
-      </div>
-     
-    </div>
+    
 
 <!-- grupo 3 redes-->
     <div class="box3 col-lg-4">
