--- a/eter.html
+++ b/eter.html
@@ -23,7 +23,7 @@
       src="https://kit.fontawesome.com/304be95d7a.js"
       crossorigin="anonymous"
     ></script>
-    <title>MDTproductora</title>
+    <title>MDT-ÉTER</title>
 </head>
 <body>
 
@@ -61,7 +61,7 @@
               <a class="nav-link fs-6 p-3" aria-current="page" href="./index.html">MDT</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link fs-6 p-3" href="./eter.html">ETER STREAM</a>
+              <a class="nav-link fs-6 p-3" href="./eter.html">ÉTER STREAM</a>
           </li>
           <li class="nav-item">
               <a class="nav-link fs-6 p-3" href="./tv.html">TV</a>
@@ -79,7 +79,7 @@
     <div class="position-relative z-1 animate__animated animate__fadeIn">
   
       <div class="cartel-eter row-12 text-slider p-2 ms-0 position-absolute w-50 text-center">
-        <h1 class="fs-1">
+        <h1 class="">
           <span>
             <img src="img/logo-de-eter-para-titulo.png" alt="" class="logo-eter"> 
           </span>
@@ -107,8 +107,8 @@
         <div class="card-img-container">
           <img src="img/SESSION BARBER.png" class="card-img-top" alt="...">
           <div class="card-overlay text-center">
-            <a href="#" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
-            <a href="#" class="fa fa-instagram icon-ig fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.youtube.com/watch?v=g8rlQ_YxwNk" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.instagram.com/sessionbarber/" class="fa fa-instagram icon-ig fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
       </div>
@@ -120,8 +120,8 @@
         <div class="card-img-container">
           <img src="img/tamo ready 2024.png" class="card-img-top" alt="...">
           <div class="card-overlay text-center">
-            <a href="#" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
-            <a href="#" class="fa fa-instagram icon-ig fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.youtube.com/watch?v=R_o7_Mfb33U" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.instagram.com/stream_tamo_ready/" class="fa fa-instagram icon-ig fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
       </div>
@@ -133,8 +133,8 @@
         <div class="card-img-container">
           <img src="img/DESPUES DE TODO.png" class="card-img-top" alt="...">
           <div class="card-overlay text-center">
-            <a href="#" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
-            <a href="#" class="fa fa-instagram icon-ig fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.youtube.com/watch?v=8WKe3wth06M&t=1425s" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.instagram.com/despdetodostream/" class="fa fa-instagram icon-ig fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
       </div>
@@ -146,8 +146,8 @@
         <div class="card-img-container">
           <img src="img/estodo1tema.png" class="card-img-top" alt="...">
           <div class="card-overlay text-center">
-            <a href="#" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
-            <a href="#" class="fa fa-instagram icon-ig  fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.youtube.com/watch?v=EpeNR6KZ5NQ" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.instagram.com/estodountema.okk/" class="fa fa-instagram icon-ig  fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
       </div>
@@ -159,8 +159,8 @@
         <div class="card-img-container">
           <img src="img/fulbo juntes.png" class="card-img-top" alt="...">
           <div class="card-overlay text-center">
-            <a href="#" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
-            <a href="#" class="fa fa-instagram icon-ig  fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.youtube.com/watch?v=ibxVnLC_0xo" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.instagram.com/fulbosinfilt/" class="fa fa-instagram icon-ig  fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
       </div>
@@ -172,8 +172,8 @@
         <div class="card-img-container">
           <img src="img/LA-BANDEJA-DSC.jpg" class="card-img-top" alt="...">
           <div class="card-overlay text-center">
-            <a href="#" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
-            <a href="#" class="fa fa-instagram icon-ig fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.youtube.com/watch?v=Nr8Vldvgt6Q" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.instagram.com/labandeja24/" class="fa fa-instagram icon-ig fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
       </div>
@@ -210,18 +210,7 @@
           </div>
     </div>
 
-    <div class="box2 col-lg-4 text-center mt-5">
-      <div class="row container-fluid">
-        <h4 class="m-1">INFORMACIÓN</h4>
-        <div class="info mt-3">
-          <p>Gutierrez 2538, Santa Fe, Argentina </p>
-          <p> Telefono: (+54) 342 - 5782141 </p>
-          <p>Email: contacto@mdtproductora.com</p>
-          <p>MDT  PRODUCTORA AUDIOVISUAL</p>
-        </div>
-      </div>
-     
-    </div>
+    
 
 <!-- grupo 3 redes-->
     <div class="box3 col-lg-4">
