card inicio y alteraciones de tamaño de imagenes

--- a/radio.html
+++ b/radio.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body>
-    <!-- HEADER -->
+       <!-- HEADER -->
 
 <header class="container-nav container-fluid z-2 position-fixed">
   
@@ -27,7 +27,7 @@
 
 <!-- LOGO -->
 
-<div class="logo-container">
+<div class="logo-container opacity-75">
     <img src="./img/LGMdt.png"/>
 </div>
 
@@ -51,7 +51,7 @@
             <a class="nav-link fs-6 p-3" aria-current="page" href="./index.html">MDT</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link fs-6 p-3" href="./eter.html">ETER STREAM</a>
+            <a class="nav-link fs-6 p-3" href="./eter.html">ÉTER STREAM</a>
         </li>
         <li class="nav-item">
             <a class="nav-link fs-6 p-3" href="./tv.html">TV</a>
@@ -67,7 +67,7 @@
 </nav>
   </header>
     
-    <div class="animate__animated animate__fadeIn">
+    <div class="position-relative z-1 animate__animated animate__fadeIn">
   
       <div class="cartel-radio row-12 text-slider p-2 ms-0 w-50 text-center">
         <h1 class="fs-1">
@@ -81,7 +81,7 @@
       
     </div>
     <!-- RADIO APP  -->
-    <div class="container text-bg-secondary w-50 rounded-3 mt-5">
+    <div class="container text-bg-secondary rounded-3 mt-5">
       <h1 class="title-radio text-center mt-5 p-4">Radio App
         <span>
         <img src="img/radio_icon.png" alt="" class="logo-radio">
