modificaciones en radio y footer

--- a/contacto.html
+++ b/contacto.html
@@ -184,7 +184,7 @@
 
 <!-- grupo 3 redes-->
     <div class="box3 col-lg-4">
-      <h4 class="text-center mt-5">SIGUENOS</h4>
+      <h4 class="siguenos fs-1 text-center mt-5">SIGUENOS</h4>
       <div class="redes d-flex justify-content-center">
         <a href="http://www.facebook.com" class="fa fa-facebook p-4 fs-5"> </a>
         <a href="http://www.twitter.com" class="fa fa-twitter p-4 fs-5"> </a>
