--- a/radio.html
+++ b/radio.html
@@ -19,7 +19,7 @@
 <body>
        <!-- HEADER -->
 
-<header class="container-nav container-fluid z-2 position-fixed">
+<header class="container-nav container-fluid position-relative">
   
   <!-- NAV -->
 
@@ -67,7 +67,7 @@
 </nav>
   </header>
     
-    <div class="position-relative z-1 animate__animated animate__fadeIn">
+    <div class="position-relativez-1 animate__animated animate__fadeIn">
   
       <div class="cartel-radio row-12 text-slider p-2 ms-0 w-50 text-center">
         <h1 class="fs-1">
@@ -124,22 +124,10 @@
           </div>
     </div>
 
-    <div class="box2 col-lg-4 text-center mt-5">
-      <div class="row container-fluid">
-        <h4 class="m-1">INFORMACIÓN</h4>
-        <div class="info mt-3">
-          <p>Gutierrez 2538, Santa Fe, Argentina </p>
-          <p> Telefono: (+54) 342 - 5782141 </p>
-          <p>Email: contacto@mdtproductora.com</p>
-          <p>MDT  PRODUCTORA AUDIOVISUAL</p>
-        </div>
-      </div>
-     
-    </div>
 
 <!-- grupo 3 redes-->
 <div class="box3 col-lg-4">
-<h4 class="text-center mt-5">SIGUENOS</h4>
+<h4 class="siguenos fs-1 text-center mt-5">SIGUENOS</h4>
 <div class="redes d-flex justify-content-center">
     <a href="http://www.facebook.com" class="fa fa-facebook p-4 fs-5"> </a>
     <a href="http://www.twitter.com" class="fa fa-twitter p-4 fs-5"> </a>
