modificaciones en el inicio

--- a/eter.html
+++ b/eter.html
@@ -87,7 +87,7 @@
         </h1>
         <p class="fs-5">TU INFINITO EN STREAMING</p>
       </div>
-      <img src="img/eter-inicio.png" alt="imagen-eter" class="img-eter container-fluid p-0 top-0 vh-100 object-fit-cover">
+      <img src="img/eter-inicio.jpg" alt="imagen-eter" class="img-eter container-fluid p-0 top-0 vh-100 object-fit-cover">
     </div>
 
 <!-- ICONO DE WHATASAPP  -->
