--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </h1>
         <p class="fs-5">PRODUCTORA AUDIOVISUAL</p>
       </div>
-      <img src="img/inicio-ok-p.png" alt="" class="img-mdt container-fluid p-0 top-0 vh-100 object-fit-cover">
+      <img src="img/inicio-ok-mdt.jpg" alt="" class="img-mdt container-fluid p-0 top-0 vh-100 object-fit-cover">
     </div>
 
 <!-- ICONO DE WHATASAPP  -->
