--- a/tv.html
+++ b/tv.html
@@ -87,7 +87,7 @@
       </h1>
         <p class="fs-5">TELEVISION ABIERTA</p>
       </div>
-      <img src="img/tv-inicio-ok.png" alt="" class="img-tv container-fluid p-0 top-0 vh-100 object-fit-cover">
+      <img src="img/tv-inicio-ok.jpg" alt="" class="img-tv container-fluid p-0 top-0 vh-100 object-fit-cover">
     </div>
 
     <!-- ICONO DE WHATASAPP  -->
