--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 
 
-<div class="box">
+<div class="box mt-5">
   <div class="box-sm red"></div>
   <div class="box-sm orange"></div>
   <div class="box-sm yellow "></div>
