--- a/eter.html
+++ b/eter.html
@@ -182,7 +182,7 @@
 </div>
   
     
-<div class="box">
+<div class="box mt-5">
   <div class="box-sm red"></div>
   <div class="box-sm orange"></div>
   <div class="box-sm yellow "></div>
