mdt noticias y organizacion de carpetas

--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="formulario.css">
+    <link rel="stylesheet" href="resource/formulario.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -211,7 +211,6 @@
   crossorigin="anonymous"
 ></script>
 <script src="https://unpkg.com/scrollreveal"></script>
-<script type="text/javascript" src="src/main.js"></script>
-<script type="text/javascript" src="formulario.js"></script>
+<script type="text/javascript" src="src/formulario.js"></script>
 </body>
 </html>
