--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="resource/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -37,12 +37,15 @@
 
   <!-- LOGO -->
 
-  <div class="logo-container">
+  <div class="logo-container d-flex align-items-center">
       <img src="./img/LGMdt.png"/>
+      <a href="mdtnoticias.html" class="nav-link nav-noticias fs-6 p-3">
+        <b>MDT noticias</b>
+      </a>
   </div>
   
   <button
-      class="navbar-toggler"
+      class="navbar-toggler text-bg-light"
       type="button"
       data-bs-toggle="collapse"
       data-bs-target="#navbarNavDropdown"
@@ -177,7 +180,7 @@
 <!-- grupo 1 logo-->
 
 <footer class="pie-pagina w-100 text-center">
-  <div class="grupo-1 d-flex flex-column flex-md-row ">
+  <div class="grupo-1 d-flex flex-column flex-md-row">
     <div class="box1 col-lg-4">
       <div class="img-container d-flex justify-content-center align-items-center">
         <a href="#">
@@ -232,6 +235,5 @@
   crossorigin="anonymous"
 ></script>
 <script src="https://unpkg.com/scrollreveal"></script>
-<script type="text/javascript" src="src/main.js"></script>
 </body>
 </html>
