--- a/tv.html
+++ b/tv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="resource/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -338,6 +338,5 @@
   crossorigin="anonymous"
 ></script>
 <script src="https://unpkg.com/scrollreveal"></script>
-<script type="text/javascript" src="src/main.js"></script>
 </body>
 </html>
