mdt noticias y responsive

--- a/mdtnoticias.html
+++ b/mdtnoticias.html
@@ -13,6 +13,7 @@
     <title>Noticias|US</title>
 </head>
 <body>
+    <a href="index.html" class="nav-link nav-noticias fs-6 p-3">MDTproductora</a>
     <div class="container">
         <h1><span>MDT</span>NOTICIAS</h1>
         <header>
