--- a/contacto.html
+++ b/contacto.html
@@ -156,12 +156,13 @@
         <!-- FOOTER  -->
 
 <!-- grupo 1 logo-->
+
 <footer class="pie-pagina w-100 text-center">
-  <div class="grupo-1 d-flex flex-column flex-md-row ">
+  <div class="grupo-1 d-flex flex-column flex-md-row">
     <div class="box1 col-lg-4">
       <div class="img-container d-flex justify-content-center align-items-center">
         <a href="#">
-          <img class="d-flex justify-content-center align-items-center mt-5" src="./img/LOGOMDT.png" alt="Logo de Ancora">
+          <img class="d-flex justify-content-center align-items-center mt-2" src="./img/LOGOMDT.png" alt="Logo de Ancora">
         </a>
 
       </div>
@@ -179,12 +180,32 @@
            
           </div>
     </div>
+    <div class="box2 mt-2">
+      <div class="row container-fluid">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1698.6829848568855!2d-60.701057151578844!3d-31.62382871437706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9c2cb6ca1e1%3A0xdee5452eed343c4e!2sJuan%20Mar%C3%ADa%20Guti%C3%A9rrez%202538%2C%20S3002%20Santa%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1709502898905!5m2!1ses!2sar" 
+        width="400" 
+        height="200" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    <!-- <iframe 
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d505.0224829755916!2d-60.70023643238288!3d-31.623642621207736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9c2cb6ca1e1%3A0xdee5452eed343c4e!2sJuan%20Mar%C3%ADa%20Guti%C3%A9rrez%202538%2C%20S3002%20Santa%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1709502525292!5m2!1ses!2sar" 
+    width="300" 
+    height="200" 
+    tyle="border:0;" 
+    allowfullscreen="" 
+    loading="lazy" 
+    referrerpolicy="no-referrer-when-downgrade">
+  </iframe> -->
+   </div>
+   </div>
 
-    
 
 <!-- grupo 3 redes-->
     <div class="box3 col-lg-4">
-      <h4 class="siguenos fs-1 text-center mt-5">SIGUENOS</h4>
+      <h4 class="siguenos text-center mt-2 fs-1">SIGUENOS</h4>
       <div class="redes d-flex justify-content-center">
         <a href="http://www.facebook.com" class="fa fa-facebook p-4 fs-5"> </a>
         <a href="http://www.twitter.com" class="fa fa-twitter p-4 fs-5"> </a>
@@ -195,7 +216,7 @@
     </div>
 
     <!-- Copyright -->
-    <div class="d-flex col-12 justify-content-center mt-5">
+    <div class="d-flex col-12 justify-content-center text-bg-light mt-5">
       <small>&copy;2024 <b>MDT</b>- Todos los Derechos Reservados.</small>
     </div>
 </footer>
