--- a/eter.html
+++ b/eter.html
@@ -107,7 +107,7 @@
         <div class="card-img-container">
           <img src="img/SESSION BARBER.png" class="card-img-top" alt="...">
           <div class="card-overlay text-center">
-            <a href="https://www.youtube.com/watch?v=g8rlQ_YxwNk" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.youtube.com/playlist?list=PL9PbmgRq__-nPVgsLLR3kYLMg79Mbq3Cf" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
             <a href="https://www.instagram.com/sessionbarber/" class="fa fa-instagram icon-ig fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
@@ -120,7 +120,7 @@
         <div class="card-img-container">
           <img src="img/tamo ready 2024.png" class="card-img-top" alt="...">
           <div class="card-overlay text-center">
-            <a href="https://www.youtube.com/watch?v=R_o7_Mfb33U" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.youtube.com/playlist?list=PL9PbmgRq__-n6rLcAAGUSwOFnJ86t_yDJ" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
             <a href="https://www.instagram.com/stream_tamo_ready/" class="fa fa-instagram icon-ig fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
@@ -133,7 +133,7 @@
         <div class="card-img-container">
           <img src="img/DESPUES DE TODO.png" class="card-img-top" alt="...">
           <div class="card-overlay text-center">
-            <a href="https://www.youtube.com/watch?v=8WKe3wth06M&t=1425s" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.youtube.com/playlist?list=PL9PbmgRq__-njKeZaAGXBpdZrbmSQfqfu" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
             <a href="https://www.instagram.com/despdetodostream/" class="fa fa-instagram icon-ig fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
@@ -146,7 +146,7 @@
         <div class="card-img-container">
           <img src="img/estodo1tema.png" class="card-img-top" alt="...">
           <div class="card-overlay text-center">
-            <a href="https://www.youtube.com/watch?v=EpeNR6KZ5NQ" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.youtube.com/playlist?list=PL9PbmgRq__-nsykm8midnTPXG189zwKHQ" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
             <a href="https://www.instagram.com/estodountema.okk/" class="fa fa-instagram icon-ig  fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
@@ -159,7 +159,7 @@
         <div class="card-img-container">
           <img src="img/fulbo juntes.png" class="card-img-top" alt="...">
           <div class="card-overlay text-center">
-            <a href="https://www.youtube.com/watch?v=ibxVnLC_0xo" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.youtube.com/playlist?list=PL9PbmgRq__-nz3klB0H7VSmadwSl6Wggf" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
             <a href="https://www.instagram.com/fulbosinfilt/" class="fa fa-instagram icon-ig  fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
@@ -172,7 +172,7 @@
         <div class="card-img-container">
           <img src="img/LA-BANDEJA-DSC.jpg" class="card-img-top" alt="...">
           <div class="card-overlay text-center">
-            <a href="https://www.youtube.com/watch?v=Nr8Vldvgt6Q" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
+            <a href="https://www.youtube.com/playlist?list=PL9PbmgRq__-laMJAez-Bh4zJibs-425hk" class="fa fa-youtube icon-yt fs-1 p-3 text-decoration-none"></a>
             <a href="https://www.instagram.com/labandeja24/" class="fa fa-instagram icon-ig fs-1 p-3 text-decoration-none"></a>
           </div>
         </div>
@@ -197,7 +197,7 @@
 <!-- grupo 1 logo-->
 
 <footer class="pie-pagina w-100 text-center">
-  <div class="grupo-1 d-flex flex-column flex-md-row ">
+  <div class="grupo-1 d-flex flex-column flex-md-row">
     <div class="box1 col-lg-4">
       <div class="img-container d-flex justify-content-center align-items-center">
         <a href="#">
@@ -219,8 +219,27 @@
            
           </div>
     </div>
-
-   
+    <div class="box2 mt-2">
+      <div class="row container-fluid">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1698.6829848568855!2d-60.701057151578844!3d-31.62382871437706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9c2cb6ca1e1%3A0xdee5452eed343c4e!2sJuan%20Mar%C3%ADa%20Guti%C3%A9rrez%202538%2C%20S3002%20Santa%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1709502898905!5m2!1ses!2sar" 
+        width="400" 
+        height="200" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    <!-- <iframe 
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d505.0224829755916!2d-60.70023643238288!3d-31.623642621207736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9c2cb6ca1e1%3A0xdee5452eed343c4e!2sJuan%20Mar%C3%ADa%20Guti%C3%A9rrez%202538%2C%20S3002%20Santa%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1709502525292!5m2!1ses!2sar" 
+    width="300" 
+    height="200" 
+    tyle="border:0;" 
+    allowfullscreen="" 
+    loading="lazy" 
+    referrerpolicy="no-referrer-when-downgrade">
+  </iframe> -->
+   </div>
+   </div>
 
 
 <!-- grupo 3 redes-->
@@ -236,7 +255,7 @@
     </div>
 
     <!-- Copyright -->
-    <div class="d-flex col-12 justify-content-center mt-5">
+    <div class="d-flex col-12 justify-content-center text-bg-light mt-5">
       <small>&copy;2024 <b>MDT</b>- Todos los Derechos Reservados.</small>
     </div>
 </footer>
