--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
 
   <div class="logo-container d-flex align-items-center">
       <img src="./img/LGMdt.png"/>
-      <a href="mdtnoticias.html" class="nav-link nav-noticias fs-6 p-3">
-        <b>MDT noticias</b>
-      </a>
   </div>
   
   <button
@@ -98,7 +95,18 @@
 <div class="wsp-btn">
   <a href="https://wa.me/+5493424463777"><img class="wsp-msg position-fixed" src="./img/whatsapp-svgrepo-com.svg" alt="icono Whatsapp"></a>
  </div>
-
+ 
+ <div class="container d-flex justify-content-center ">
+   
+   <div class="card w-75 mt-5">
+     <div class="card-img-noticias">
+       
+       <a href="mdtnoticias.html">
+         <img src="img/banner-franco.jpg" alt="" class="w-100">
+        </a>
+      </div>
+    </div>
+  </div>
 
  <div class="container mt-5 ">
   <div class="row">
@@ -202,8 +210,27 @@
            
           </div>
     </div>
-
-   
+    <div class="box2 mt-2">
+      <div class="row container-fluid">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1698.6829848568855!2d-60.701057151578844!3d-31.62382871437706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9c2cb6ca1e1%3A0xdee5452eed343c4e!2sJuan%20Mar%C3%ADa%20Guti%C3%A9rrez%202538%2C%20S3002%20Santa%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1709502898905!5m2!1ses!2sar" 
+        width="400" 
+        height="200" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    <!-- <iframe 
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d505.0224829755916!2d-60.70023643238288!3d-31.623642621207736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9c2cb6ca1e1%3A0xdee5452eed343c4e!2sJuan%20Mar%C3%ADa%20Guti%C3%A9rrez%202538%2C%20S3002%20Santa%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1709502525292!5m2!1ses!2sar" 
+    width="300" 
+    height="200" 
+    tyle="border:0;" 
+    allowfullscreen="" 
+    loading="lazy" 
+    referrerpolicy="no-referrer-when-downgrade">
+  </iframe> -->
+   </div>
+   </div>
 
 
 <!-- grupo 3 redes-->
@@ -219,7 +246,7 @@
     </div>
 
     <!-- Copyright -->
-    <div class="d-flex col-12 justify-content-center mt-5">
+    <div class="d-flex col-12 justify-content-center text-bg-light mt-5">
       <small>&copy;2024 <b>MDT</b>- Todos los Derechos Reservados.</small>
     </div>
 </footer>
